[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/pause.gd" type="Script" id=1]
[ext_resource path="res://Shary the fairy/files/png/gui/plashka.png" type="Texture" id=2]
[ext_resource path="res://Shary the fairy/files/png/gui/circle_red.png" type="Texture" id=3]
[ext_resource path="res://Shary the fairy/files/png/gui/x.png" type="Texture" id=4]
[ext_resource path="res://Shary the fairy/files/png/gui/circle_green.png" type="Texture" id=5]
[ext_resource path="res://Shary the fairy/files/png/gui/Group_12.png" type="Texture" id=6]
[ext_resource path="res://Shary the fairy/files/png/gui/r1.png" type="Texture" id=7]
[ext_resource path="res://Shary the fairy/files/png/gui/replay.png" type="Texture" id=8]
[ext_resource path="res://Shary the fairy/files/png/gui/paused.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource/name = "Hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Home:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 65.5257, 322.297 ), Vector2( 65.5257, 1318.15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Home:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite 2:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 409.996, 481.226 ), Vector2( 409.996, 1477.08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite 2:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Replay:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 307.525, 578.297 ), Vector2( 307.525, 1574.15 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Replay:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Return:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 621.69, 322.297 ), Vector2( 621.69, 1318.15 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Return:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 83.509, 349.737 ), Vector2( 83.509, 1345.59 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "Show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Home:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 65.5257, -583.327 ), Vector2( 65.5257, 322.297 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Home:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite 2:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 409.996, -424.398 ), Vector2( 409.996, 481.226 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite 2:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Replay:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 307.525, -327.327 ), Vector2( 307.525, 578.297 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Replay:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Return:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 621.69, -583.327 ), Vector2( 621.69, 322.297 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Return:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 83.509, -555.887 ), Vector2( 83.509, 349.737 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="Pause" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1280.0
color = Color( 1, 1, 1, 0.470588 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 83.509, -555.887 )
transform/scale = Vector2( 0.5, 0.275773 )
texture = ExtResource( 2 )
centered = false

[node name="Return" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 621.69, -583.327 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Return"]

transform/pos = Vector2( 112.564, 105.395 )
texture = ExtResource( 4 )

[node name="Home" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 65.5257, -583.327 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Home"]

transform/pos = Vector2( 112.564, 105.395 )
texture = ExtResource( 6 )

[node name="Replay" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 307.525, -327.327 )
transform/scale = Vector2( 0.5, 0.499999 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Replay"]

transform/pos = Vector2( 186.977, 89.8652 )
texture = ExtResource( 8 )

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 409.996, -424.398 )
transform/scale = Vector2( 1, 0.999999 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Show"

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]

[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]


